[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Intro Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/m23.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Theme/DinoGameTheme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Gamer.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 5
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 4 )

[node name="Intro Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 240.0
margin_bottom = 160.0
color = Color( 0, 0, 0, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -72.0
margin_right = 71.0
margin_bottom = 57.0
size_flags_horizontal = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 141.0
margin_bottom = 129.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer" groups=[
"modulate1",
]]
margin_right = 141.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Dino Runner
Simulator"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_left = 41.0
margin_top = 39.0
margin_right = 100.0
margin_bottom = 111.0
size_flags_horizontal = 4

[node name="Play" type="Button" parent="HBoxContainer/VBoxContainer/VBoxContainer" groups=[
"hover",
]]
margin_right = 59.0
margin_bottom = 15.0
size_flags_horizontal = 5
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
action_mode = 0
text = "Play"

[node name="Options" type="Button" parent="HBoxContainer/VBoxContainer/VBoxContainer" groups=[
"hover",
]]
margin_top = 19.0
margin_right = 59.0
margin_bottom = 34.0
size_flags_horizontal = 5
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
action_mode = 0
text = "Options"

[node name="Reset" type="Button" parent="HBoxContainer/VBoxContainer/VBoxContainer" groups=[
"hover",
]]
margin_top = 38.0
margin_right = 59.0
margin_bottom = 53.0
size_flags_horizontal = 5
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
action_mode = 0
text = "Reset Data"

[node name="Quit" type="Button" parent="HBoxContainer/VBoxContainer/VBoxContainer" groups=[
"hover",
]]
margin_top = 57.0
margin_right = 59.0
margin_bottom = 72.0
size_flags_horizontal = 5
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
action_mode = 0
text = "Quit"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -39.0
margin_top = -21.0
margin_right = 39.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Label2" type="Label" parent="VBoxContainer" groups=[
"modulate1",
]]
margin_right = 78.0
margin_bottom = 21.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "credit to Patrick de Arteaga for 
Music \"Yellow Forrest\"
Visit his website at patrickdearteaga.com"
align = 1

[node name="PopupPanel" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -47.0
margin_top = -33.0
margin_right = 48.0
margin_bottom = 52.0
size_flags_vertical = 3
theme = ExtResource( 3 )

[node name="GridContainer" type="GridContainer" parent="PopupPanel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 91.0
margin_bottom = 81.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PopupPanel/GridContainer" groups=[
"modulate1",
]]
margin_right = 87.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0 )
text = "Are you sure?"
align = 1

[node name="Yes" type="Button" parent="PopupPanel/GridContainer" groups=[
"hover",
]]
margin_top = 43.0
margin_right = 87.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 5 )
text = "Yes"

[node name="No" type="Button" parent="PopupPanel/GridContainer" groups=[
"hover",
]]
margin_top = 62.0
margin_right = 87.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 6 )
text = "No"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="PopupPanel/GridContainer/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="PopupPanel/GridContainer/No" to="." method="_on_No_pressed"]
